--- a/source/reapir-apple.css
+++ b/source/reapir-apple.css
@@ -4,70 +4,22 @@
 
 .repair_apple {
     width: 100%;
-    border: 5px solid red;
+    border: 3px solid black;
     display: flex;
     flex-wrap: wrap;
 }
 
-.wrap {
-    width: 25%;
-    height: 400px;
-    border: 2px solid black;
-}
-/* стили для айфона */
-.repair_iphone {
-    width: 100%;
-    height: 90%;
-    border: 2px solid orange;
-    overflow: hidden;
-    background-image: url(images/repair_iphone_broken.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
+.repair_iphone, 
+.repair_ipad,
+.repair_watch,
+.repair_macbook {
+    width: 50%;
 }
 
-.wrap:hover .repair_iphone {
-    background-image: url(images/repair_iphone_ok.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
-    transition: 1.5s;
-}
-/* стили для айпада */
-.repair_ipad {
-    width: 100%;
-    height: 90%;
-    border: 2px solid orange;
-    overflow: hidden;
-    background-image: url(images/repair_ipad_broke.png);
-    background-repeat: no-repeat;
-    background-position: center;
-}
-
-.wrap:hover .repair_ipad {
-    background-image: url(images/repair_ipad_ok.png);
-    background-repeat: no-repeat;
-    background-position: center;
-    transition: 1.5s;
-}
-
-.repair_watch {
-    width: 100%;
-    height: 90%;
-    border: 2px solid orange;
-    overflow: hidden;
-    background-image: url(images/repair_watch_broke.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
-}
-
-.wrap:hover .repair_watch {
-    background-image: url(images/repair_watch_ok.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
-    transition: 1.5s;
-}
-
-/* общие для ссылок */
-.wrap > a {
+.repair_iphone > a,
+.repair_ipad > a,
+.repair_watch > a,
+.repair_macbook > a {
     text-decoration: none;
     color: black;
     display: block;
@@ -76,7 +28,70 @@
     text-align: center;
 }
 
-.wrap:hover a {
+.repair_iphone > a:hover,
+.repair_ipad > a:hover,
+.repair_watch > a:hover,
+.repair_macbook > a:hover {
     color: #61dafb;
     transition: 0.5s;
+}
+
+.repair_iphone_img {
+    width: 100%;
+    height: 300px;
+    background-image: url(images/iphone/iphone11promax_broken_300bw.png);
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.repair_iphone:hover .repair_iphone_img {
+    background-image: url(images/iphone/iphone11promax_ok_300.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    transition: 1.5s;
+}
+
+.repair_ipad_img {
+    width: 100%;
+    height: 300px;
+    background-image: url(images/iphone/ipadpro12_broken_300bw.png);
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.repair_ipad:hover .repair_ipad_img {
+    background-image: url(images/iphone/ipadpro12_ok_300.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    transition: 1.5s;
+}
+
+.repair_watch_img {
+    width: 100%;
+    height: 300px;
+    background-image: url(images/iphone/watch_broken_300bw.png);
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.repair_watch:hover .repair_watch_img {
+    background-image: url(images/iphone/watch_ok_300.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    transition: 1.5s;
+}
+
+.repair_macbook_img {
+    width: 100%;
+    height: 300px;
+    background-image: url(images/iphone/macbookpro2016_broken_300bw.png);
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.repair_macbook:hover .repair_macbook_img {
+    background-image: url(images/iphone/macbookpro2016_ok_300.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    transition: 1.5s;
 }
