--- a/iphone.css
+++ b/iphone.css
@@ -314,6 +314,10 @@ h2 {
     border: 2px solid #035f70;
 }
 
+span {
+    font-size: 1rem;
+}
+
 .table tr {
     color: #fff;
     border: 1px solid #035f70;
