optimazed code on page repair

--- a/reapir-apple.css
+++ b/reapir-apple.css
@@ -47,7 +47,7 @@
     transition: 1.5s;
 }
 
-.repair_iphone_img |{
+.repair_iphone_img {
     background-image: url(images/iphone/iphone11promax_broken_300bw.png);
 }
 
