--- a/style.css
+++ b/style.css
@@ -55,7 +55,6 @@ li {
 main{
     width: 1024px;
     margin: 0 auto;
-    /* border: 4px ridge #035f70; */
     background-color: black;
 }
 
@@ -96,7 +95,7 @@ main{
 }
 
 .main-menu > li > a:hover, 
-.main-menu > li > span:hover { /* эффект при наведении */
+.main-menu > li > span:hover {
     background-color: #61dafb;
     color: #20232a;
     transition: 0.7s;
@@ -258,4 +257,11 @@ h3 > img,
 .info > h3 > a {
     color: black;
     text-decoration: none;
+}
+
+footer {
+    width: 1024px;
+    height: 200px;
+    background-color: #282c34;
+    margin: 0 auto;
 }
