--- a/iphone.css
+++ b/iphone.css
@@ -37,6 +37,7 @@ h3 {
 .breakdowns_list > ul > li > img {
     width: 40px;
     height: 40px;
+    vertical-align: middle;
 }
 
 .repair_iphone_11_pro_max,
